--- a/HeatMap.html
+++ b/HeatMap.html
@@ -214,7 +214,7 @@
 
 				}
 			}
-			xmlhttp.open("GET", "getThermostats.php", true);
+			xmlhttp.open("GET", "scripts/getThermostats.php", true);
 			xmlhttp.send();
 		}
     </script>
@@ -222,7 +222,7 @@
   <body>
       <h2>Campus Temperatures</h2>
 
-	<div><object id="map-svg" title="HellO" width="80%" height="80%" type="image/svg+xml" data="/Map.svg" onload="mapLoaded()"></object></div><br>
+	<div><object id="map-svg" title="HellO" width="80%" height="80%" type="image/svg+xml" data="Map.svg" onload="mapLoaded()"></object></div><br>
 	<a href="/">Events Map</a>
 	<div id="test"></div>
   </body>
