--- a/index.html
+++ b/index.html
@@ -250,6 +250,6 @@
 	<div id="timeText">10 AM</div>
 	<div id="time"></div>
   </body>
-  <body><br><br><br><br><a href="/HeatMap.html">AC Heat Map</a></body>
+  <body><br><br><br><br><a href="HeatMap.html">AC Heat Map</a></body>
   <div id="mouseTooltip" >Event</div>
 </html>
